--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">RecyclerView</string>
-    <string name="item">Item</string>
+    <string name="app_name">Recycle Viewer</string>
+    <string name="item">User</string>
 </resources>
